--- a/index.html
+++ b/index.html
@@ -83,11 +83,16 @@
             flex: 1;
             max-width: 300px;
             min-width: 200px;
+            background-color: #FFC107; /* Amarelo para o box */
+            padding: 10px; /* Espaço para o box aparecer */
+            border-radius: 15px; /* Cantos arredondados para o box */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Sombra suave */
         }
         .profile-img img {
             width: 100%;
             border-radius: 50%;
-            border: 5px solid #FFC107; /* Borda amarela */
+            border: 5px solid #000080; /* Borda azul marinho para contrastar */
+            display: block;
         }
         .profile-info {
             flex: 2;
@@ -169,7 +174,7 @@
     <div class="container main">
         <div class="profile-card">
             <div class="profile-img">
-                <img src="thiago01.jpg" alt="Foto de Thiago Silva">
+                <img src="thiago0.jpg" alt="Foto de Thiago Silva">
             </div>
             <div class="profile-info">
                 <h1>Thiago Marcos Gouveia da Silva</h1>
