--- a/fotos.html
+++ b/fotos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotos - Thiago Silva</title>
+    <title>Galeria de Fotos - Thiago Silva</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,12 +40,12 @@
             color: #000080;
             border-radius: 5px;
         }
-        h1 {
+        .gallery-title {
             text-align: center;
-            margin-top: 20px;
-            border-bottom: 2px solid #000080; /* Azul Marinho */
+            color: #000080;
+            margin-top: 40px;
+            border-bottom: 2px solid #000080;
             padding-bottom: 10px;
-            color: #000080; /* Azul Marinho */
         }
         .gallery {
             display: grid;
@@ -55,19 +55,20 @@
         }
         .gallery-item {
             background: #fff;
-            border: 2px solid #FFC107; /* Borda amarela */
+            border: 1px solid #ddd;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
             overflow: hidden;
-            transition: transform 0.3s;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
         .gallery-item:hover {
-            transform: scale(1.05);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
         }
         .gallery-item img {
             width: 100%;
-            height: 250px; /* Altura fixa para todas as imagens */
-            object-fit: cover; /* Garante que a imagem cubra a área sem distorcer */
+            height: 250px; /* Altura fixa */
+            object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
             display: block;
         }
         footer {
@@ -75,7 +76,7 @@
             padding: 20px;
             background: #000080; /* Azul Marinho */
             color: #fff;
-            margin-top: 20px;
+            margin-top: 40px;
         }
     </style>
 </head>
@@ -93,25 +94,25 @@
     </nav>
 
     <div class="container">
-        <h1>Momentos Marcantes</h1>
+        <h2 class="gallery-title">Momentos da Trajetória</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="thiago01.jpg" alt="Thiago Silva jogando tênis de mesa">
+                <img src="./thiago01.jpg" alt="Thiago Silva em ação 1">
             </div>
             <div class="gallery-item">
-                <img src="thiago02.jpg" alt="Thiago Silva em competição">
+                <img src="./thiago02.jpg" alt="Thiago Silva em ação 2">
             </div>
             <div class="gallery-item">
-                <img src="thiago03.jpg" alt="Thiago Silva concentrado na partida">
+                <img src="./thiago03.jpg" alt="Thiago Silva em ação 3">
             </div>
             <div class="gallery-item">
-                <img src="thiago04.jpg" alt="Close em Thiago Silva durante o jogo">
+                <img src="./thiago04.jpg" alt="Thiago Silva em ação 4">
             </div>
             <div class="gallery-item">
-                <img src="thiago05.jpg" alt="Thiago Silva no pódio com outros atletas">
+                <img src="./thiago05.jpg" alt="Thiago Silva em pódio">
             </div>
             <div class="gallery-item">
-                <img src="thiago06.jpg" alt="Thiago Silva com medalhas e troféus">
+                <img src="./thiago06.jpg" alt="Thiago Silva com medalhas">
             </div>
         </div>
     </div>
