--- a/fotos.html
+++ b/fotos.html
@@ -20,8 +20,18 @@
         header {
             background: #000080; /* Azul Marinho */
             color: #fff;
-            padding: 1rem 0;
-            text-align: center;
+            padding: 1rem 20px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+        .header-logo {
+            height: 60px;
+            border-radius: 5px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 1.8em;
         }
         nav {
             background: #00005a; /* Azul Marinho mais escuro */
@@ -83,6 +93,7 @@
 <body>
 
     <header>
+        <img src="./thiagologo.jpg" alt="Logo Thiago Silva" class="header-logo">
         <h1>Galeria de Fotos</h1>
     </header>
 
