--- a/projeto.html
+++ b/projeto.html
@@ -9,8 +9,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f4f8; /* Fundo azul bem claro */
-            color: #000000; /* Fonte preta */
+            background-color: #f0f4f8;
+            color: #000000;
         }
         .container {
             max-width: 1000px;
@@ -20,11 +20,21 @@
         header {
             background: #000080; /* Azul Marinho */
             color: #fff;
-            padding: 1rem 0;
-            text-align: center;
+            padding: 1rem 20px; /* Ajustado para alinhamento */
+            display: flex;
+            align-items: center;
+        }
+        .header-logo {
+            height: 60px; /* Tamanho ajustado */
+            border-radius: 5px;
+            margin-right: 20px; /* Espaço entre a logo e o título */
+        }
+        header h1 {
+            margin: 0;
+            font-size: 1.8em;
         }
         nav {
-            background: #00005a; /* Azul Marinho mais escuro */
+            background: #00005a;
             color: #fff;
             padding: 0.5rem;
             text-align: center;
@@ -47,13 +57,20 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        h1, h2 {
-            border-bottom: 2px solid #000080; /* Azul Marinho */
+        h2 {
+            border-bottom: 2px solid #000080;
             padding-bottom: 10px;
-            color: #000080; /* Azul Marinho */
+            color: #000080;
         }
         ul {
-            padding-left: 20px;
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            background: #f0f4f8;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-left: 5px solid #000080; /* Azul Marinho */
         }
         table {
             width: 100%;
@@ -62,25 +79,25 @@
         }
         th, td {
             padding: 12px;
+            border: 1px solid #ddd;
             text-align: left;
-            border-bottom: 1px solid #ddd;
         }
         th {
+            background-color: #000080;
+            color: white;
+        }
+        tr:nth-child(even) {
             background-color: #f2f2f2;
-            color: #333;
         }
-        tr:hover {
-            background-color: #f5f5f5;
-        }
-        .total-row td {
+        .total-row {
             font-weight: bold;
-            background-color: #fff9c4; /* Amarelo claro */
+            background-color: #FFC107; /* Amarelo */
             color: #000080;
         }
         footer {
             text-align: center;
             padding: 20px;
-            background: #000080; /* Azul Marinho */
+            background: #000080;
             color: #fff;
             margin-top: 20px;
         }
@@ -89,7 +106,8 @@
 <body>
 
     <header>
-        <h1>Projeto: Desenvolvimento Esportivo de Thiago Silva</h1>
+        <img src="./thiagologo.jpg" alt="Logo Thiago Silva" class="header-logo">
+        <h1>Projeto Esportivo</h1>
     </header>
 
     <nav>
@@ -101,33 +119,30 @@
 
     <div class="container">
         <div class="section">
-            <h1>Detalhes do Projeto</h1>
-            <p><strong>Nome:</strong> Desenvolvimento Esportivo de Thiago Silva - Tênis de Mesa</p>
-            <p><strong>Modalidade:</strong> Tênis de Mesa</p>
-            <p><strong>Categoria:</strong> Atleta Individual - 1º lugar no Ranking Estadual SUB-13</p>
-            <p><strong>Período de Execução:</strong> 12 meses (Janeiro a Dezembro de 2026)</p>
-            <p><strong>Valor Solicitado:</strong> R$ 40.000,00</p>
+            <h2>Desenvolvimento Esportivo de Thiago Silva</h2>
+            <p>Este projeto busca fornecer a estrutura necessária para o pleno desenvolvimento do atleta Thiago Silva, um dos talentos mais promissores do tênis de mesa baiano. O objetivo é consolidá-lo como uma referência nacional no esporte.</p>
+            <ul>
+                <li><strong>Modalidade:</strong> Tênis de Mesa</li>
+                <li><strong>Categoria:</strong> Atleta Individual</li>
+                <li><strong>Ranking Atual:</strong> 1º lugar no Ranking Estadual SUB-13</li>
+                <li><strong>Período do Projeto:</strong> 12 meses</li>
+                <li><strong>Valor Solicitado:</strong> R$ 40.000,00</li>
+            </ul>
         </div>
 
         <div class="section">
-            <h2>Justificativa</h2>
-            <p>Este projeto visa oferecer a Thiago a estrutura necessária para seu pleno desenvolvimento como atleta de alto rendimento. O investimento é essencial para cobrir custos com treinos contínuos em academia especializada, participação em competições, acompanhamento profissional e aquisição de materiais, permitindo que ele continue evoluindo e representando a Bahia em cenários nacional e internacional.</p>
-        </div>
-        
-        <div class="section">
-            <h2>Objetivos</h2>
-            <p><strong>Geral:</strong> Consolidar Thiago Silva como uma referência do tênis de mesa nacional, promovendo seu desenvolvimento esportivo, físico e social.</p>
-            <p><strong>Específicos:</strong></p>
+            <h2>Objetivos Específicos</h2>
             <ul>
-                <li>Participar de, no mínimo, 12 competições oficiais.</li>
-                <li>Manter a liderança no ranking estadual SUB-13 e alcançar o top 10 nacional SUB-15.</li>
-                <li>Realizar 5 treinos técnicos semanais em academia especializada.</li>
+                <li>Manter a 1ª colocação no ranking estadual SUB-13.</li>
+                <li>Alcançar o top 10 no ranking nacional SUB-15.</li>
+                <li>Participar de pelo menos 12 competições oficiais (municipais e estaduais).</li>
+                <li>Realizar 5 sessões semanais de treino técnico em academia especializada.</li>
                 <li>Garantir suporte nutricional e médico para otimizar a performance.</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Orçamento Detalhado (12 meses)</h2>
+            <h2>Orçamento Detalhado</h2>
             <table>
                 <thead>
                     <tr>
@@ -141,52 +156,28 @@
                         <td>14.400,00</td>
                     </tr>
                     <tr>
-                        <td>Técnico</td>
-                        <td>4.000,00</td>
+                        <td>Técnico e Gestor</td>
+                        <td>6.000,00</td>
                     </tr>
                     <tr>
-                        <td>Gestor</td>
-                        <td>2.000,00</td>
+                        <td>Inscrição, Viagem e Hospedagem (Nacional)</td>
+                        <td>4.440,00</td>
                     </tr>
                     <tr>
-                        <td>Inscrição - Evento Nacional</td>
-                        <td>500,00</td>
-                    </tr>
-                     <tr>
-                        <td>Viagem</td>
-                        <td>2.500,00</td>
+                        <td>Equipamentos, Materiais, Uniforme e Tênis</td>
+                        <td>6.700,00</td>
                     </tr>
                     <tr>
-                        <td>Hospedagem</td>
-                        <td>1.440,00</td>
-                    </tr>
-                    <tr>
-                        <td>Equipamentos e Materiais</td>
-                        <td>4.900,00</td>
-                    </tr>
-                     <tr>
-                        <td>Uniforme</td>
-                        <td>1.000,00</td>
-                    </tr>
-                    <tr>
-                        <td>Tênis</td>
-                        <td>800,00</td>
-                    </tr>
-                    <tr>
-                        <td>Academia (R$ 600 x 12)</td>
+                        <td>Academia (12 meses)</td>
                         <td>7.200,00</td>
                     </tr>
-                     <tr>
-                        <td>Suplementos (R$ 85 x 12)</td>
-                        <td>1.020,00</td>
-                    </tr>
-                     <tr>
-                        <td>Consultas Médicas</td>
-                        <td>240,00</td>
+                    <tr>
+                        <td>Suplementos e Consultas Médicas</td>
+                        <td>1.260,00</td>
                     </tr>
                     <tr class="total-row">
                         <td>Total</td>
-                        <td>R$ 40.000,00</td>
+                        <td>40.000,00</td>
                     </tr>
                 </tbody>
             </table>
