--- a/projeto.html
+++ b/projeto.html
@@ -20,14 +20,14 @@
         header {
             background: #000080; /* Azul Marinho */
             color: #fff;
-            padding: 1rem 20px; /* Ajustado para alinhamento */
+            padding: 1rem 20px;
             display: flex;
             align-items: center;
         }
         .header-logo {
-            height: 60px; /* Tamanho ajustado */
+            height: 60px;
             border-radius: 5px;
-            margin-right: 20px; /* Espaço entre a logo e o título */
+            margin-right: 20px;
         }
         header h1 {
             margin: 0;
@@ -70,7 +70,10 @@
             background: #f0f4f8;
             margin-bottom: 10px;
             padding: 10px;
-            border-left: 5px solid #000080; /* Azul Marinho */
+            border-left: 5px solid #000080;
+        }
+        p {
+            line-height: 1.6;
         }
         table {
             width: 100%;
@@ -119,30 +122,124 @@
 
     <div class="container">
         <div class="section">
-            <h2>Desenvolvimento Esportivo de Thiago Silva</h2>
-            <p>Este projeto busca fornecer a estrutura necessária para o pleno desenvolvimento do atleta Thiago Silva, um dos talentos mais promissores do tênis de mesa baiano. O objetivo é consolidá-lo como uma referência nacional no esporte.</p>
+            <h2>1. Identificação do Projeto</h2>
             <ul>
+                <li><strong>Nome do Projeto:</strong> Desenvolvimento Esportivo de Thiago Silva - Tênis de Mesa</li>
                 <li><strong>Modalidade:</strong> Tênis de Mesa</li>
                 <li><strong>Categoria:</strong> Atleta Individual</li>
-                <li><strong>Ranking Atual:</strong> 1º lugar no Ranking Estadual SUB-13</li>
-                <li><strong>Período do Projeto:</strong> 12 meses</li>
+                <li><strong>Período:</strong> 12 meses (Jan-Dez/2026)</li>
                 <li><strong>Valor Solicitado:</strong> R$ 40.000,00</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Objetivos Específicos</h2>
+            <h2>2. Identificação do Atleta</h2>
             <ul>
-                <li>Manter a 1ª colocação no ranking estadual SUB-13.</li>
-                <li>Alcançar o top 10 no ranking nacional SUB-15.</li>
-                <li>Participar de pelo menos 12 competições oficiais (municipais e estaduais).</li>
+                <li><strong>Nome:</strong> Thiago Marcos Gouveia da Silva</li>
+                <li><strong>Nascimento:</strong> 04/05/2012 (13 anos)</li>
+                <li><strong>Residência:</strong> Salvador-BA</li>
+                <li><strong>Federação:</strong> Federação de Tênis de Mesa da Bahia - FTMBA</li>
+                <li><strong>Ranking 2025:</strong> 1º lugar SUB-13 (Campeonato Baiano)</li>
+            </ul>
+        </div>
+        
+        <div class="section">
+            <h2>3. Justificativa</h2>
+            <p>Thiago Silva desponta como um dos principais talentos emergentes do tênis de mesa baiano. Em menos de dois anos, transformou sua paixão em resultados concretos: campeão de etapas do Campeonato Baiano SUB-13, vice-campeão escolar e medalhista triplo na Copa Brasil CBTM Salvador 2025. Além dos feitos, destacou-se nos Jogos Escolares Brasileiros, evidenciando disciplina, resiliência e capacidade de superação.</p>
+            <p>Este projeto tem por objetivo oferecer a Thiago a estrutura necessária para seu desenvolvimento pleno, destacando a necessidade essencial de treino contínuo em uma academia especializada de tênis de mesa na Bahia, que possui profissionais altamente gabaritados e experiência comprovada no desenvolvimento de atletas de alto rendimento.</p>
+        </div>
+
+        <div class="section">
+            <h2>4. Objetivos</h2>
+            <p><strong>Geral:</strong> Consolidar Thiago Silva como referência do tênis de mesa nacional, promovendo seu desenvolvimento esportivo, físico e social.</p>
+            <p><strong>Específicos:</strong></p>
+            <ul>
+                <li>Participar de pelo menos 12 competições oficiais entre níveis municipal e estadual.</li>
+                <li>Manter a 1ª colocação no ranking estadual SUB-13 e alcançar top 10 no ranking nacional SUB-15.</li>
                 <li>Realizar 5 sessões semanais de treino técnico em academia especializada.</li>
-                <li>Garantir suporte nutricional e médico para otimizar a performance.</li>
+                <li>Monitorar desempenho mensalmente com relatórios detalhados.</li>
+                <li>Prover suporte nutricional e médico adequados para otimização da performance.</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Orçamento Detalhado</h2>
+            <h2>5. Cronograma de Competições 2026</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Mês</th>
+                        <th>Evento</th>
+                        <th>Nível</th>
+                        <th>Local</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Janeiro</td>
+                        <td>Torneio ETMPAN, ABTM, CTB 1ª Etapa (SUB-13)</td>
+                        <td>Municipal</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Abril</td>
+                        <td>Campeonato Baiano 1ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Maio</td>
+                        <td>Campeonato Baiano 2ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Junho</td>
+                        <td>Campeonato Baiano 3ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Julho</td>
+                        <td>Campeonato Baiano 4ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Agosto</td>
+                        <td>Campeonato Baiano 5ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Setembro</td>
+                        <td>Campeonato Baiano 6ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Outubro</td>
+                        <td>Copa Brasil CBTM</td>
+                        <td>Nacional</td>
+                        <td>Recife-PE</td>
+                    </tr>
+                    <tr>
+                        <td>Novembro</td>
+                        <td>Campeonato Baiano 7ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                    <tr>
+                        <td>Dezembro</td>
+                        <td>Campeonato Baiano 8ª Etapa</td>
+                        <td>Estadual</td>
+                        <td>Salvador-BA</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="section">
+            <h2>6. Orçamento Detalhado</h2>
             <table>
                 <thead>
                     <tr>
@@ -185,7 +282,7 @@
     </div>
 
     <footer>
-        <p>Infográfico Esportivo - Thiago Silva &copy; 2025</p>
+        <p>Infográfico Esportivo - Thiago Silva &copy; 2026</p>
     </footer>
 
 </body>
