--- a/projeto.html
+++ b/projeto.html
@@ -43,7 +43,7 @@
             color: #fff;
             text-decoration: none;
             padding: 0.5rem 1rem;
-            transition: background-color 0.3s;
+            transition: background-color: 0.3s;
         }
         nav a:hover {
             background-color: #FFC107; /* Amarelo */
