--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@
             <h2>Principais Conquistas</h2>
             <ul>
                 <li><strong>1º Lugar no Ranking Estadual SUB-13 (2025)</strong></li>
-                <li>Campeão de etapas do Campeonato Baiano SUB-13</li>
-                <li>Vice-campeão nos Jogos Escolares</li>
+                <li>Campeão de todas as etapas do Campeonato Baiano SUB-13</li>
+                <li>Campeão nos Jogos Escolares da Bahia - JEB/2025</li>
                 <li>Medalhista triplo (bronze) na Copa Brasil CBTM em Salvador (2025)</li>
-                <li>Representante da Bahia nos Jogos Escolares Brasileiros (JEBS)</li>
+                <li>Representante da Bahia nos Jogos Escolares Brasileiros (JEBS-2025)</li>
+                <li>Campeão Rating D - E - F - Campeonato Baiano 2024/2025</li>
             </ul>
         </div>
 
