--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="container main">
         <div class="profile-card">
             <div class="profile-img">
-                <img src="thiago0.jpg" alt="Foto de Thiago Silva">
+                <img src="thiago0.jpeg" alt="Foto de Thiago Silva">
             </div>
             <div class="profile-info">
                 <h1>Thiago Marcos Gouveia da Silva</h1>
