--- a/fotos.html
+++ b/fotos.html
@@ -97,16 +97,16 @@
 
     <div class="container">
         <div class="gallery">
-            <div class="gallery-item"><img src="./thiago01.jpg" alt="Foto de Thiago 01"></div>
-            <div class="gallery-item"><img src="./thiago02.jpg" alt="Foto de Thiago 02"></div>
-            <div class="gallery-item"><img src="./thiago03.jpg" alt="Foto de Thiago 03"></div>
-            <div class="gallery-item"><img src="./thiago04.jpg" alt="Foto de Thiago 04"></div>
-            <div class="gallery-item"><img src="./thiago05.jpg" alt="Foto de Thiago 05"></div>
-            <div class="gallery-item"><img src="./thiago06.jpg" alt="Foto de Thiago 06"></div>
-            <div class="gallery-item"><img src="./thiago07.jpg" alt="Foto de Thiago 07"></div>
-            <div class="gallery-item"><img src="./thiago08.jpg" alt="Foto de Thiago 08"></div>
-            <div class="gallery-item"><img src="./thiago09.jpg" alt="Foto de Thiago 09"></div>
-            <div class="gallery-item"><img src="./thiago10.jpg" alt="Foto de Thiago 10"></div>
+            <div class="gallery-item"><img src="./thiago01.jpeg" alt="Foto de Thiago 01"></div>
+            <div class="gallery-item"><img src="./thiago02.jpeg" alt="Foto de Thiago 02"></div>
+            <div class="gallery-item"><img src="./thiago03.jpeg" alt="Foto de Thiago 03"></div>
+            <div class="gallery-item"><img src="./thiago04.jpeg" alt="Foto de Thiago 04"></div>
+            <div class="gallery-item"><img src="./thiago05.jpeg" alt="Foto de Thiago 05"></div>
+            <div class="gallery-item"><img src="./thiago06.jpeg" alt="Foto de Thiago 06"></div>
+            <div class="gallery-item"><img src="./thiago07.jpeg" alt="Foto de Thiago 07"></div>
+            <div class="gallery-item"><img src="./thiago08.jpeg" alt="Foto de Thiago 08"></div>
+            <div class="gallery-item"><img src="./thiago09.jpeg" alt="Foto de Thiago 09"></div>
+            <div class="gallery-item"><img src="./thiago10.jpeg" alt="Foto de Thiago 10"></div>
         </div>
     </div>
 
