--- a/fotos.html
+++ b/fotos.html
@@ -107,6 +107,8 @@
             <div class="gallery-item"><img src="./thiago08.jpeg" alt="Foto de Thiago 08"></div>
             <div class="gallery-item"><img src="./thiago09.jpeg" alt="Foto de Thiago 09"></div>
             <div class="gallery-item"><img src="./thiago10.jpeg" alt="Foto de Thiago 10"></div>
+            <div class="gallery-item"><img src="./thiago11.jpeg" alt="Foto de Thiago 11"></div>
+            <div class="gallery-item"><img src="./thiago12.jpeg" alt="Foto de Thiago 12"></div>
         </div>
     </div>
 
