--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <a href="index.html">Início</a>
         <a href="fotos.html">Fotos</a>
         <a href="projeto.html">Projeto</a>
-        <a href="lei.html">Lei de Incentivo</a>
+        <a href="lei.html">Lei Incentivo</a>
     </nav>
 
     <div class="container main">
