--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </div>
 
     <footer>
-        <p>Infográfico Esportivo - Thiago Silva &copy; 2025</p>
+        <p>Contato - Marcos Dias - 71-98867-6473 - marcos.dias.g@gmail.com&copy; 2025</p>
     </footer>
 
 </body>
