--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
     </div>
 
     <footer>
-        <p>Contato: Marcos Dias 71-98867-6473 &copy; </p>
-        <p>marcos.dias.g@gmail.com &copy; </p>
+        <p>Contato: Marcos Dias 71-98867-6473 </p>
+        <p>marcos.dias.g@gmail.com </p>
     </footer>
 
 </body>
