--- a/projeto.html
+++ b/projeto.html
@@ -145,7 +145,7 @@
         
         <div class="section">
             <h2>3. Justificativa</h2>
-            <p>Thiago Silva desponta como um dos principais talentos emergentes do tênis de mesa baiano. Em menos de dois anos, transformou sua paixão em resultados concretos: campeão de etapas do Campeonato Baiano SUB-13, vice-campeão escolar e medalhista triplo na Copa Brasil CBTM Salvador 2025. Além dos feitos, destacou-se nos Jogos Escolares Brasileiros, evidenciando disciplina, resiliência e capacidade de superação.</p>
+            <p>Thiago Silva desponta como um dos principais talentos emergentes do tênis de mesa baiano. Em menos de dois anos, transformou sua paixão em resultados concretos: campeão de todas as etapas do Campeonato Baiano SUB-13, Campeão nos Jogos Escolares da Bahia - JEB/2025, Campeão Rating D - E - F no Campeonato Baiano 2024/2025, medalhista triplo na Copa Brasil CBTM Salvador 2025. Além dos feitos, destacou-se nos Jogos Escolares Brasileiros, evidenciando disciplina, resiliência e capacidade de superação.</p>
             <p>Este projeto tem por objetivo oferecer a Thiago a estrutura necessária para seu desenvolvimento pleno, destacando a necessidade essencial de treino contínuo em uma academia especializada de tênis de mesa na Bahia, que possui profissionais altamente gabaritados e experiência comprovada no desenvolvimento de atletas de alto rendimento.</p>
         </div>
 
