--- a/projeto.html
+++ b/projeto.html
@@ -3,288 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Esportivo - Thiago Silva</title>
+    <title>Thiago Silva - Projeto</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f4f8;
-            color: #000000;
-        }
-        .container {
-            max-width: 1000px;
-            margin: auto;
-            padding: 20px;
-        }
-        header {
-            background: #000080; /* Azul Marinho */
-            color: #fff;
-            padding: 1rem 20px;
-            display: flex;
-            align-items: center;
-        }
-        .header-logo {
-            height: 60px;
-            border-radius: 5px;
-            margin-right: 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 1.8em;
-        }
-        nav {
-            background: #00005a;
-            color: #fff;
-            padding: 0.5rem;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            transition: background-color: 0.3s;
-        }
-        nav a:hover {
-            background-color: #FFC107; /* Amarelo */
-            color: #000080;
-            border-radius: 5px;
-        }
-        .section {
-            background: #fff;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h2 {
-            border-bottom: 2px solid #000080;
-            padding-bottom: 10px;
-            color: #000080;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            background: #f0f4f8;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-left: 5px solid #000080;
-        }
-        p {
-            line-height: 1.6;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            padding: 12px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-        th {
-            background-color: #000080;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        .total-row {
-            font-weight: bold;
-            background-color: #FFC107; /* Amarelo */
-            color: #000080;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #000080;
-            color: #fff;
-            margin-top: 20px;
+        /* Estilos gerais (iguais para todas as páginas) */
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #000000; }
+        .container { max-width: 1000px; margin: auto; overflow: hidden; padding: 0 20px; }
+        header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; }
+        .logo-left-container { display: flex; align-items: center; gap: 15px; }
+        .logo-left { height: 50px; border-radius: 5px; }
+        .athlete-text { color: #FFC107; font-size: 1.2em; }
+        header h1 { margin: 0; font-size: 1.5em; color: #fff; }
+        .logo-right { height: 80px; border-radius: 5px; }
+        nav { background: #00005a; color: #fff; padding: 0.5rem; text-align: center; }
+        nav a { color: #fff; text-decoration: none; padding: 0.5rem 1rem; transition: background-color 0.3s; }
+        nav a:hover { background-color: #FFC107; color: #000080; border-radius: 5px; }
+        .main { padding: 20px 0; }
+        .section { background: #fff; padding: 20px; margin-top: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        h2 { border-bottom: 2px solid #000080; padding-bottom: 10px; color: #000080; }
+        footer { text-align: center; padding: 20px; background: #000080; color: #fff; margin-top: 20px; }
+        /* Responsividade */
+        @media (max-width: 768px) {
+            header { flex-direction: column; gap: 15px; }
+            header h1 { font-size: 1.2em; order: 1; }
+            .logo-left-container { order: 2; }
+            .logo-right { order: 3; height: 60px; }
         }
     </style>
 </head>
 <body>
 
     <header>
-        <img src="./thiagologo.jpg" alt="Logo Thiago Silva" class="header-logo">
-        <h1>Projeto Esportivo</h1>
+        <div class="logo-left-container">
+            <img src="aabb.jpg" alt="Logo AABB" class="logo-left">
+            <span class="athlete-text"><strong>ATLETA</strong></span>
+        </div>
+        <h1>Thiago Silva - Talento do Tênis de Mesa</h1>
+        <img src="thiagologo.jpg" alt="Logo Thiago Silva" class="logo-right">
     </header>
 
     <nav>
-        <a href="index.html">Início</a>
-        <a href="fotos.html">Fotos</a>
+        <a href="index.html">Apresentação</a>
+        <a href="atleta.html">Atleta</a>
+        <a href="album.html">Álbum</a>
         <a href="projeto.html">Projeto</a>
         <a href="lei.html">Lei de Incentivo</a>
     </nav>
 
-    <div class="container">
+    <div class="container main">
         <div class="section">
-            <h2>1. Identificação do Projeto</h2>
-            <ul>
-                <li><strong>Nome do Projeto:</strong> Desenvolvimento Esportivo de Thiago Silva - Tênis de Mesa</li>
-                <li><strong>Modalidade:</strong> Tênis de Mesa</li>
-                <li><strong>Categoria:</strong> Atleta Individual</li>
-                <li><strong>Período:</strong> 12 meses (Jan-Dez/2026)</li>
-                <li><strong>Valor Solicitado:</strong> R$ 40.000,00</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>2. Identificação do Atleta</h2>
-            <ul>
-                <li><strong>Nome:</strong> Thiago Marcos Gouveia da Silva</li>
-                <li><strong>Nascimento:</strong> 04/05/2012 (13 anos)</li>
-                <li><strong>Residência:</strong> Salvador-BA</li>
-                <li><strong>Federação:</strong> Federação de Tênis de Mesa da Bahia - FTMBA</li>
-                <li><strong>Ranking 2025:</strong> 1º lugar SUB-13 (Campeonato Baiano)</li>
-            </ul>
-        </div>
-        
-        <div class="section">
-            <h2>3. Justificativa</h2>
-            <p>Thiago Silva desponta como um dos principais talentos emergentes do tênis de mesa baiano. Em menos de dois anos, transformou sua paixão em resultados concretos: Campeão de todas as etapas do Campeonato Baiano SUB-13, Campeão nos Jogos Escolares da Bahia - JEB/2025, Campeão Rating D - E - F no Campeonato Baiano 2024/2025, medalhista triplo na Copa Brasil CBTM Salvador 2025. Além dos feitos, destacou-se nos Jogos Escolares Brasileiros, evidenciando disciplina, resiliência e capacidade de superação.</p>
-            <p>Este projeto tem por objetivo oferecer a Thiago a estrutura necessária para seu desenvolvimento pleno, destacando a necessidade essencial de treino contínuo em uma academia especializada de tênis de mesa na Bahia, que possui profissionais altamente gabaritados e experiência comprovada no desenvolvimento de atletas de alto rendimento.</p>
-        </div>
-
-        <div class="section">
-            <h2>4. Objetivos</h2>
-            <p><strong>Geral:</strong> Consolidar Thiago Silva como referência do tênis de mesa nacional, promovendo seu desenvolvimento esportivo, físico e social.</p>
-            <p><strong>Específicos:</strong></p>
-            <ul>
-                <li>Participar de pelo menos 12 competições oficiais entre níveis municipal e estadual.</li>
-                <li>Manter a 1ª colocação no ranking estadual SUB-13 e alcançar top 10 no ranking nacional SUB-15.</li>
-                <li>Realizar 5 sessões semanais de treino técnico em academia especializada.</li>
-                <li>Monitorar desempenho mensalmente com relatórios detalhados.</li>
-                <li>Prover suporte nutricional e médico adequados para otimização da performance.</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>5. Cronograma de Competições 2026</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Mês</th>
-                        <th>Evento</th>
-                        <th>Nível</th>
-                        <th>Local</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Janeiro</td>
-                        <td>Torneio ETMPAN, ABTM, CTB 1ª Etapa (SUB-13)</td>
-                        <td>Municipal</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Abril</td>
-                        <td>Campeonato Baiano 1ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Maio</td>
-                        <td>Campeonato Baiano 2ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Junho</td>
-                        <td>Campeonato Baiano 3ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Julho</td>
-                        <td>Campeonato Baiano 4ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Agosto</td>
-                        <td>Campeonato Baiano 5ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Setembro</td>
-                        <td>Campeonato Baiano 6ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Outubro</td>
-                        <td>Copa Brasil CBTM</td>
-                        <td>Nacional</td>
-                        <td>Recife-PE</td>
-                    </tr>
-                    <tr>
-                        <td>Novembro</td>
-                        <td>Campeonato Baiano 7ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                    <tr>
-                        <td>Dezembro</td>
-                        <td>Campeonato Baiano 8ª Etapa</td>
-                        <td>Estadual</td>
-                        <td>Salvador-BA</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <div class="section">
-            <h2>6. Orçamento Detalhado</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Categoria</th>
-                        <th>Valor Total (R$)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Bolsa Atleta</td>
-                        <td>14.400,00</td>
-                    </tr>
-                    <tr>
-                        <td>Técnico e Gestor</td>
-                        <td>6.000,00</td>
-                    </tr>
-                    <tr>
-                        <td>Inscrição, Viagem e Hospedagem (Nacional)</td>
-                        <td>4.440,00</td>
-                    </tr>
-                    <tr>
-                        <td>Equipamentos, Materiais, Uniforme e Tênis</td>
-                        <td>6.700,00</td>
-                    </tr>
-                    <tr>
-                        <td>Academia (12 meses)</td>
-                        <td>7.200,00</td>
-                    </tr>
-                    <tr>
-                        <td>Suplementos e Consultas Médicas</td>
-                        <td>1.260,00</td>
-                    </tr>
-                    <tr class="total-row">
-                        <td>Total</td>
-                        <td>40.000,00</td>
-                    </tr>
-                </tbody>
-            </table>
+            <h2>O Projeto</h2>
+            <p><strong>Insira aqui as informações detalhadas sobre o projeto.</strong></p>
+            <p>Você pode falar sobre os objetivos do projeto, a metodologia de treinamento, os custos envolvidos, o cronograma e como os apoiadores podem contribuir.</p>
+            <p>Este espaço é totalmente customizável para atender às suas necessidades.</p>
         </div>
     </div>
 
     <footer>
-        <p>Infográfico Esportivo - Thiago Silva &copy; 2026</p>
+        <p>Contato: Marcos Dias 71-98867-6473 </p>
+        <p>marcos.dias.g@gmail.com </p>
     </footer>
 
 </body>
 </html>
-
