--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiago Silva - Tênis de Mesa</title>
     <style>
-        /* Estilos gerais (iguais para todas as páginas) */
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #000000; }
         .container { max-width: 1000px; margin: auto; overflow: hidden; padding: 0 20px; }
         header { background: #000080; color: #fff; padding: 1rem 20px; text-align: center; display: flex; justify-content: space-between; align-items: center; }
@@ -21,19 +20,8 @@
         .section { background: #fff; padding: 20px; margin-top: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
         h2 { border-bottom: 2px solid #000080; padding-bottom: 10px; color: #000080; }
         footer { text-align: center; padding: 20px; background: #000080; color: #fff; margin-top: 20px; }
-        /* Estilo para o vídeo */
-        .video-container {
-            width: 100%;
-            max-width: 1000px;
-            margin: auto;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        video {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        /* Responsividade */
+        .video-container { width: 100%; max-width: 1000px; margin: auto; background-color: #000; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        video { width: 100%; height: auto; display: block; border-radius: 8px; }
         @media (max-width: 768px) {
             header { flex-direction: column; gap: 15px; }
             header h1 { font-size: 1.2em; order: 1; }
@@ -43,7 +31,6 @@
     </style>
 </head>
 <body>
-
     <header>
         <div class="logo-left-container">
             <img src="aabb.jpg" alt="Logo AABB" class="logo-left">
@@ -52,7 +39,6 @@
         <h1>Thiago Silva - Talento do Tênis de Mesa</h1>
         <img src="thiagologo.jpg" alt="Logo Thiago Silva" class="logo-right">
     </header>
-
     <nav>
         <a href="index.html">Apresentação</a>
         <a href="atleta.html">Atleta</a>
@@ -60,23 +46,20 @@
         <a href="projeto.html">Projeto</a>
         <a href="lei.html">Lei de Incentivo</a>
     </nav>
-
     <div class="container main">
         <div class="section">
             <h2>Apresentação</h2>
             <div class="video-container">
-                <video controls autoplay muted loop>
+                <video controls loop>
                     <source src="videothiago.mp4" type="video/mp4">
                     Seu navegador não suporta o elemento de vídeo.
                 </video>
             </div>
         </div>
     </div>
-
     <footer>
         <p>Contato: Marcos Dias 71-98867-6473 </p>
         <p>marcos.dias.g@gmail.com </p>
     </footer>
-
 </body>
 </html>
